utilities/Sol/modules/grammars/ide/src/test/resources/cocos/valid/CircularDependencySubModule.ide
package valid

typedef module CircularDependencySubModule {

}
