utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/ExcludeIncludedModule1.ide
package invalid

typedef module ExcludeIncludedModule1 {

}
